--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
         <h3>Decorator</h3>
 
         <dl>
-            <dt><a href="/DesignPatterns/2_3_decorator_logoutlink.php">Decorator</a>
+            <dt><a href="/DesignPatterns/2_3_decorator_logoutlink.php">LogoutLink</a>
+            <dd>Es ejemplo es bastante claro y muestra bien como decorar un Component con uno o varios Decorators
+            <dt><a href="/DesignPatterns/2_3_decorator_filereadwrite.php">File Read Write</a>
             <dd>
         </dl>
 
