Se agrega el nuevo ejemplo Logger para el patón Decorator.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             <dt><a href="/DesignPatterns/2_2_bridge_buscador.php">Buscador + Form Element (Bridge + FactoryMethod)</a>
             <dd>Con este ejemplo se puede ver que se dividen en dos la lógica del buscador (abstracción) haciendo que cada buscador sepa cuales son sus filtros y la implementación que especifica en cuantas columnas se mostrarán los filtros
             <dd>
+            <dt><a href="/DesignPatterns/2_3_decorator_logger.php">Logger (Decorator + Factory Method)</a>
+            <dd>Este ejemplo es bastante completo. Con un factory method obtenemos entre dos tipos de loggers, uno para consola y el otro para archivo. Por medio de los decorators decidimos si el formato va a ser plano, en html, en xml o en formato csv.
+
         </dl>
 
         <hr />
@@ -70,6 +73,8 @@
             <dd>Es ejemplo es bastante claro y muestra bien como decorar un Component con uno o varios Decorators
             <dt><a href="/DesignPatterns/2_3_decorator_filereadwrite.php">File Read Write</a>
             <dd>
+            <dt><a href="/DesignPatterns/2_3_decorator_logger.php">Logger (Decorator + Factory Method)</a>
+            <dd>Este ejemplo es bastante completo. Con un factory method obtenemos entre dos tipos de loggers, uno para consola y el otro para archivo. Por medio de los decorators decidimos si el formato va a ser plano, en html, en xml o en formato csv.
         </dl>
 
         <h2>Referencias</h2>
